--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>SASS</title>
   </head>
   <body>
     <header class="showcase">
@@ -30,9 +30,7 @@
             <a href="#" class="btn-primary">Learn More</a>
             <a href="#" class="btn-secondary">Sign Up</a>
           </div>
-          <img
-            src="./images/website.png"
-          />
+          <img src="./images/website.png" />
         </div>
       </div>
     </header>
